# monitorch

./: README.md  pyproject.toml
examples/: basic_usage.py  feature_combo_demo.py  high_dim_demo.py  notebook_demo.py  simple_nn_demo.py  vscode_demo.py
monitorch/: __init__.py  core.py  infer.py  render.py
monitorch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_monitorch.py
