[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitorch"
version = "0.1.0"
description = "Tensor flow visualization for PyTorch debugging."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.0",
  "matplotlib>=3.7",
  "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["monitorch*"]
